# EVA

./: .buildinfo  .gitignore  ECorr_Window.py  EVA.spec  Eff_Window.py  Energy_Corrections.py  FindPeaks.py  FitData.py  GenReadList.py  LICENSE  LoadDatabaseFile.py  Load_Settings  MainWindow.py  Manual.py  MultiPlot.py  MultiPlotWindow.py  Normalise.py  PeakFit.py  PlotWidget.py  PlotWindow.py  Plot_Spectra.py  Plot_Window.py  README.md  ReadMultiRun.py  RunTrimExample.py  Settings.txt  Show_Plot_Window.py  SortMatch.py  TRIM_Window.py  Test_E_Corr.py  Test_GammaLoad.py  Test_GammaMatch.py  Test_LoadComment.py  Test_LoadJason.py  Test_SRIM.py  Test_SaveEff.py  Test_get_matches.py  Test_getmatch.py  Test_list.py  Test_loadData.py  (+23 more)
.doctrees/: environment.pickle  index.doctree  installation.doctree  manual.doctree
Tests/: Test_E_Corr.py  Test_GammaLoad.py  Test_GammaMatch.py  Test_LoadComment.py  Test_LoadJason.py  Test_SRIM.py  Test_SaveEff.py  Test_get_matches.py  Test_getmatch.py  Test_list.py  Test_loadData.py  test_databases_get_match.py  test_energy_correction.py  test_gamma_database_load.py  test_load_comment.py  test_load_run.py  test_muon_database_load.py  test_save_efficiencies.py  test_srim.py  test_util.py
_sources/: index.rst.txt  installation.rst.txt
dev/: code_overview.html  dev_index.html  docs.html  getting_started.html  gui.html  unit_testing.html  writing_documentation.html
doc/: conf.py  manual.rst
src/: main.py
test_data/: aa.txt  fit.json  init.json  init5.json  ti_peaks_ge4.json
tests/: test_databases_get_match.py  test_load_comment.py  (+5 more)
(+310 files in other folders)
